<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/navigationBackgroundColor"
    tools:context=".AddMedicineActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:text="@string/register_a_new_medicine"
                android:textAlignment="center"
                android:textColor="?attr/titleTextColor"
                android:textSize="45sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/name_field"
                android:textColorHint="?attr/hintColor" />

            <EditText
                android:id="@+id/amountField"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/amount_field"
                android:textColorHint="?attr/hintColor"
                android:inputType="number"/>

            <EditText
                android:id="@+id/purposeField"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/purpose_field"
                android:textColorHint="?attr/hintColor" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/photoField"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/photo_field"
                    android:textColorHint="?attr/hintColor"
                    android:textSize="18sp"
                    android:onClick="onClick" />

                <ImageButton
                    android:id="@+id/cameraButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    android:src="@drawable/camera" />

                <ImageButton
                    android:id="@+id/galleryButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_background"
                    android:contentDescription="@string/image"
                    android:scaleType="fitXY"
                    android:src="@drawable/folder" />
            </LinearLayout>

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/image"
                android:adjustViewBounds="true"/>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginBottom="100dp"
                android:layout_weight="1"
                android:background="@drawable/button_green_background"
                app:backgroundTint="@null"
                android:text="@string/register"
                android:textColor="?attr/buttonTextColor" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>