<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCardMedicine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:cardBackgroundColor="@color/recycler_color"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recMedicineImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/recMedicineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/recMedicineImage"
            android:text="@string/medicine_name"
            android:textColor="@color/green_4"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pharmacyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recMedicineName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-4dp"
            android:layout_toEndOf="@+id/recMedicineImage"
            android:textColor="@color/green_4"
            android:textSize="12sp"
            android:text="@string/pharmacy" />

        <TextView
            android:id="@+id/hyphen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recMedicineName"
            android:layout_marginTop="-4dp"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/pharmacyName"
            android:text="@string/hyphen"
            android:textColor="@color/green_4"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/pharmacyDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recMedicineName"
            android:layout_marginTop="-4dp"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/hyphen"
            android:text="@string/zero_meters"
            android:textColor="@color/green_4"
            android:textSize="12sp" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>