<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCardMedicine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    app:cardBackgroundColor="@color/recycler_color"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/recMedicineImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/image"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/recMedicineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/buyButton"
            android:layout_toEndOf="@id/recMedicineImage"
            android:gravity="center_vertical"
            android:text="@string/medicine_name"
            android:textColor="@color/green_4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/stockString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recMedicineName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-4dp"
            android:layout_toEndOf="@+id/recMedicineImage"
            android:textColor="@color/green_4"
            android:textSize="12sp"
            android:text="@string/stock" />

        <TextView
            android:id="@+id/stockAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recMedicineName"
            android:layout_marginTop="-4dp"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/stockString"
            android:text="@string/zero"
            android:textColor="@color/green_4"
            android:textSize="12sp" />

        <!--<Button
            android:id="@+id/buyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/green_3"
            android:textColor="@color/beige_2"
            android:text="@string/buy" />-->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/pharmacy_image"
            android:id="@+id/buyButton"
            android:src="@drawable/baseline_add_shopping_cart_24"
            android:background="@color/zxing_transparent"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>