<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/pageBackgroundColor">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pharmacyImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/pharmacy_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/pharmacyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/pharmacy_name"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pharmacyImage" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:isIndicator="true"
                        android:progressBackgroundTint="@color/beige_3"

                        android:progressTint="@color/quantum_yellow"
                        android:rating="3.5"
                        android:stepSize="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pharmacyName" />

                    <TextView
                        android:id="@+id/pharmacyLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/address"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/favoriteIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:clickable="true"
                        android:contentDescription="@string/favorite"
                        android:focusable="true"
                        android:background="@drawable/favorite_icon_selector" />

                    <ImageView
                        android:id="@+id/gotoPharmacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:clickable="true"
                        android:contentDescription="@string/go_to_pharmacy"
                        android:focusable="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/favoriteIcon"
                        app:srcCompat="@drawable/baseline_location_on_24" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/availableStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/available_stock"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pharmacyLocation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stockList"
                android:layout_width="350dp"
                android:layout_height="169dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/manageStock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/availableStock"
                tools:listitem="@layout/recycler_buy_medicine">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/manageStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/manage_stock"
                android:focusable="true"
                android:text="@string/manage_stock"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@drawable/bottom_beige_background"
                android:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!--
            <ImageView
                android:id="@+id/pharmacyImage"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
             -->

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>